# shakhmati

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: BitBoard.cpp  BitBoard.hpp  Debug.hpp  MagicConstants.hpp  Move.cpp  Move.hpp  MoveGen.cpp  MoveGen.hpp
src/core/MoveGen/: MoveGen.cpp  PawnGen.cpp  PawnMove.cpp  QueenMove.cpp
src/core/MoveGen/headers/: MoveGen.hpp
src/core/headers/: BitBoard.hpp  Debug.hpp  MagicConstants.hpp  Move.hpp  MoveGen.hpp  Piece.hpp  Testing.hpp
